--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.6",
+    "@kyvg/vue3-notification": "^3.2.0",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "axios": "^1.6.7",
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.8.3",
     "popper.js": "^1.16.1",
-    "vee-validate": "^4.12.6",
     "vue": "^3.2.13",
+    "vue-meta": "^2.4.0",
     "vue-router": "^4.0.13",
     "vuetify": "^3.5.7",
     "vuex": "^4.1.0"
